# WEB_HW_10

./: .env  .gitignore  migrate_db.py  pyproject.toml
my_app/: migrate_db.py
my_app/my_app/: settings.py  urls.py
my_app/quotes_app/: forms.py  models.py  urls.py  views.py
my_app/quotes_app/migrations/: 0001_initial.py
my_app/quotes_app/templates/quotes_app/: author.html  base.html  index.html  quotes.html
my_app/users/: forms.py  urls.py  views.py
my_app/users/templates/users/: login.html  register.html
